--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -1,8 +1,10 @@
+---
+---
 <section
   class="relative bg-[url(public/high-angle-dj-control-panel-close-up.webp)] bg-cover bg-center bg-no-repeat"
 >
   <div
-    class="absolute inset-0 bg-white/75 sm:bg-transparent sm:from-white/95 sm:to-white/25 ltr:sm:bg-gradient-to-r rtl:sm:bg-gradient-to-l"
+    class="absolute inset-0  sm:bg-transparent sm:from-white/95 sm:to-white/25 ltr:sm:bg-gradient-to-r rtl:sm:bg-gradient-to-l"
   ></div>
 
   <div
@@ -11,18 +13,8 @@
     <div class="max-w-xl text-center ltr:sm:text-left rtl:sm:text-right">
       <h1 class="text-3xl font-extrabold sm:text-5xl text-teal-500">
         Dani DJ
-        <strong class="block font-extrabold text-white">  Eventos </strong>
+        <strong class="block font-extrabold text-white"> Eventos </strong>
       </h1>
-
-      <div class="mt-8 flex flex-wrap gap-4 text-center">
-        <a
-          href="#"
-          class="block w-full rounded bg-teal-500 px-12 py-3 text-sm font-medium text-white shadow hover:bg-neutral-900 focus:outline-none focus:ring active:bg-teal-500 sm:w-auto"
-        >
-          Contactame
-        </a>
-        </a>
-      </div>
     </div>
   </div>
 </section>
