--- a/src/components/Servicios.astro
+++ b/src/components/Servicios.astro
@@ -1,8 +1,9 @@
 ---
 import Services from '../components/Icons/services.astro';
+const {id} = Astro.props
 ---
 
-<h2 class="text-3xl font-semibold text-white flex mt-6 pl-5 gap-x-3 items-center dark:text-white">
+<h2 id={id} class="text-3xl font-semibold text-white flex mt-6 pl-5 gap-x-3 items-center dark:text-white">
     <Services class="size-7"/>
     servicios
 </h2>
