--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,6 +20,7 @@ import '@fontsource-variable/inter';
 	<body>
 	<slot />
 	<div class="relative h-full w-full bg-slate-950"><div class="absolute bottom-0 left-0 right-0 top-0 bg-[radial-gradient(circle_500px_at_50%_200px,#3e3e3e,transparent)]"></div></div>
+	
 	</body>
 </html>
 <style is:global>
@@ -27,5 +28,6 @@ import '@fontsource-variable/inter';
 		font-family: 'Inter Variable', sans-serif;
 		background: #13151a;
 		background-size: 224px;
+		scroll-behavior: smooth;
 	}
 </style>
