--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,23 +1,32 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Header from '../components/Header.astro';
+import Aboutme from '../components/Aboutme.astro';
 import Banner from '../components/Banner.astro';
 import Card from '../components/Card.astro';
+import Contacto from '../components/contacto.astro';
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
+import Layout from '../layouts/Layout.astro';
+import Mail from '../components/Mailform.astro';
 import SectionContainer from '../components/SectionContainer.astro';
-import Aboutme from '../components/Aboutme.astro';
-import User from '../components/Icons/User.astro';
 import Servicios from '../components/Servicios.astro';
 ---
 
 <Layout title="Welcome to Astro.">
 	<main>
-		<Header />
-		<Banner />
-		<Servicios/>
-		<SectionContainer>
+		<Header id="Inicío"/>
+		<Banner/>
+		<Servicios id="Servicios"/>
+		<SectionContainer >
 			<Card />
 		</SectionContainer>
-		<Aboutme/>
+		<SectionContainer id="Sobre mi">
+			<Aboutme />
+		</SectionContainer>
+		<SectionContainer id="Contacto">
+			<Contacto/>
+		</SectionContainer>
+			<Mail id="Contacto"/>
+		<Footer />
 	</main>
 </Layout>
 
