Agregando ultimos detalles de al pagina web

--- a/src/components/SocailPill.astro
+++ b/src/components/SocailPill.astro
@@ -8,10 +8,10 @@
     text-black/70 dark:text-white
     transition
     hover:scale-110 hover:bg-white/10
-    
   `}
   {...Astro.props}
   target="_blank"
-  rel="noopener noreferrer">
+  rel="noopener noreferrer"
+>
   <slot />
 </a>
