--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,9 +9,10 @@ import Layout from '../layouts/Layout.astro';
 import Mail from '../components/Mailform.astro';
 import SectionContainer from '../components/SectionContainer.astro';
 import Servicios from '../components/Servicios.astro';
+import Socialmedia from '../components/SocialMedia.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Dani DJ">
 	<main>
 		<Header id="Inicío"/>
 		<Banner/>
@@ -29,4 +30,3 @@ import Servicios from '../components/Servicios.astro';
 		<Footer />
 	</main>
 </Layout>
-
