--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -27,13 +27,13 @@ import Contact from '../components/Contac.astro';
         <img src="../../public/DJ_Monogram_Logo-removebg-preview 1dj.png" class="h-12" alt="DJ logo" />
         <span class="self-center text-2xl font-semibold whitespace-nowrap text-white dark:text-white">DaniDJ Eventos</span>
       </a>
-      <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
+      <button id="button" data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
         <span class="sr-only">Abrir menu pricipal</span>
         <svg class="w-5 h-5" aria-hidden="true" fill="none" viewBox="0 0 17 14">
           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
         </svg>
       </button>
-      <div id="targetEl" class="hidden w-full md:block md:w-auto">
+      <div id="defaultModal" class="hidden w-full md:block md:w-auto">
         <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-neutral-900 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-neutral-900 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700 ">
           {ITEMS.map (link => (
             <li>
@@ -47,16 +47,6 @@ import Contact from '../components/Contac.astro';
   </nav>
 </section>
 
-<script>
-import { Collapse } from "flowbite"
-const $targetEL = document.getElementById('targetEl');
-const options ={
-  onExpand: () => {
-      const collapse = new Collapse($targetEL)
-    },
-  };
-
-</script>
 <style>
   nav {
     animation: nav-shadown 1s linear both;
