--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,16 +13,30 @@ import '@fontsource-variable/inter';
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/public/DJ_Monogram_Logo-removebg-preview 1dj.png" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
 	<body>
 	<slot />
 	<div class="relative h-full w-full bg-slate-950"><div class="absolute bottom-0 left-0 right-0 top-0 bg-[radial-gradient(circle_500px_at_50%_200px,#3e3e3e,transparent)]"></div></div>
-	
 	</body>
 </html>
+<script>
+	import { Collapse } from 'flowbite'
+  
+	// select the two elements that we'll work with
+	const $buttonElement: HTMLElement | null = document.querySelector('#button');
+	const $modalElement: HTMLElement | null = document.querySelector('#defaultModal');
+  
+	// create a new modal component
+	const modal = new Collapse($modalElement);
+  
+	// toggle the visibility of the modal when clicking on the button
+	if ($buttonElement) {
+	  $buttonElement.addEventListener('click', () => modal.toggle());
+	}
+  </script>
 <style is:global>
 	html {
 		font-family: 'Inter Variable', sans-serif;
