Cambiando ubicacion de la carpeta public

--- a/src/components/Aboutme.astro
+++ b/src/components/Aboutme.astro
@@ -14,6 +14,6 @@ import User from '../components/Icons/User.astro';
                     Mi nombre es Danilo caceres soy DJ profecional hacer 10 años estudie en el Palacio de la musica con Oscar Valdez uno de losmejores DJ de uruguay y latinoamerica Contando con el abal del palacio de la musica y DJ School como DJ internacional 
                 </p>
             </div>
-            <img class="rounded-full size-64" src="">
+            <img class="rounded-full size-64" src="https://scontent.fmvd3-1.fna.fbcdn.net/v/t35.18174-12/10585794_10204316325017838_1571184306_o.jpg?_nc_cat=102&ccb=1-7&_nc_sid=5f2048&_nc_ohc=tsmUKRoGcX8Ab6QI8XC&_nc_ht=scontent.fmvd3-1.fna&oh=00_AfAbXv8pZF0FdHhPr21g0_20emJQr9431n20mDnLj9kanw&oe=66234415">
         </article>
     </section>
