--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -1,5 +1,5 @@
 <section
-  class="relative bg-[./] bg-cover bg-center bg-no-repeat"
+  class="relative bg-[url(/public/high-angle-dj-control-panel-close-up.webp)] bg-cover bg-center bg-no-repeat"
 >
   <div
     class="absolute inset-0  sm:bg-transparent sm:from-white/95 sm:to-white/25 ltr:sm:bg-gradient-to-r rtl:sm:bg-gradient-to-l"
@@ -11,7 +11,7 @@
     <div class="max-w-xl text-center ltr:sm:text-left rtl:sm:text-right">
       <h1 class="text-3xl font-extrabold sm:text-5xl text-teal-500">
         Dani DJ
-        <strong class="block font-extrabold text-white"> Eventos </strong>
+        <strong class="block font-extrabold text-gray-500"> Eventos </strong>
       </h1>
     </div>
   </div>
