--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
     <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
         <div class="sm:flex sm:items-center sm:justify-between">
             <a class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
-                <img class="h-12" src="/../../public/DJ_Monogram_Logo-removebg-preview 1dj.png" />
+                <img class="h-12" src="/public/DJ_Monogram_Logo-removebg-preview 1dj.png" />
                 <span class="self-center text-2xl font-semibold whitespace-nowrap text-white">DaniDJ Eventos</span>
             </a>
         </div>
