--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,6 +16,11 @@ const ITEMS = [
         label: "sobre mi",
         url: "/#Sobre mi",
     },
+    {
+        title: "Metodos de pago",
+        label: "metodos de pago",
+        url: "/#Metodos de pago",
+    },
 ];
 import Contact from '../components/Contac.astro';
 ---
