--- a/src/components/SocialMedia.astro
+++ b/src/components/SocialMedia.astro
@@ -2,6 +2,7 @@
 import SocailPill from '../components/SocailPill.astro';
 import Whatsapp from '../components/Icons/WhatsApp.astro';
 import Instagram from '../components/Icons/Instagram.astro';
+import Mercadolibre from './Icons/MercadoLibre.astro';
 ---
 <nav class="flex gap-4 mt-8 justify-self-center">
     <SocailPill href="https://wa.me/095433880">
@@ -9,5 +10,8 @@ import Instagram from '../components/Icons/Instagram.astro';
     </SocailPill>
     <SocailPill href="https://www.instagram.com/danidjeventos/">
         <Instagram class="size-14"/>
+    </SocailPill>
+    <SocailPill href="https://fiesta-evento.mercadolibre.com.uy/MLU-678335706-dani-dj-eventos-_JM">
+        <Mercadolibre class="size-14"/>
     </SocailPill>
 </nav>
