Solucionando problema con las imagenes

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -3,19 +3,19 @@ const EVENTS = [
 	{
 		title: "Cumpleaños de 15",
 		description: "La fiesta de 15 años es un evento especial en la vida de los jóvenes. Ofrecemos un paquete completo con iluminación y sonido de calidad para una noche inolvidable y mágica.",
-		image: "./public/tarta-quince.jpg",
+		image: "public/tarta-quince.jpg",
 		alt: "Cumpleaños",
 	},
 	{
 		title: "Bodas",
 		description:"La boda de tus sueños se hace realidad con nuestro servicio de iluminación y sonido de última generación. Con nosotros, podrás crear una noche mágica e inolvidable para ti y tus seres queridos.",
-		image: "./public/novio-poniendo-anillo-dedo-novia.jpg",
+		image: "public/novio-poniendo-anillo-dedo-novia.jpg",
 		alt: "Bodas",
 	},
 	{
 		title: "Eventos Corporativos",
 		description: "Desde conferencias y presentaciones hasta fiestas de empresa, podemos proporcionarte todo lo que necesitas para asegurarte de que tu evento sea un éxito",
-		image: "./public/12003024_884898498259258_6130636717072031986_n-original.webp",
+		image: "public/12003024_884898498259258_6130636717072031986_n-original.webp",
 		alt: "Eventos",
 	},
 ];
