--- a/src/components/MetodosdePago.astro
+++ b/src/components/MetodosdePago.astro
@@ -4,19 +4,19 @@ const METODO =[
         title:"MercadoPago",
         name:"mercadoPago",
         description:"  Financiacion con todas las trjetas asta en 10 cuotas sin rtecargo (se financia monto completo al momento de la contatacion)",
-        image: "/public/mercado-pago.svg"
+        image: "public/mercado-pago.svg"
     },
     {
       title:"Transferencía bancaría",
       name:"Itau",
       description:"Se avona el 50% del servicio al momento de la contratacion y el resto el dia del evento con el comprobante de la transferecia",
-      image:"/public/itau.svg"
+      image:"public/itau.svg"
     },
     {
       title:"Transferencía bancaría",
       name:"Itau",
       description:"Se avona el 50% del servicio al momento de la contratacion y el resto el dia del evento",
-      image:"/public/illust57-5439.svg"
+      image:"public/illust57-5439.svg"
     }
 ]
 ---
