--- a/src/components/Aboutme.astro
+++ b/src/components/Aboutme.astro
@@ -14,6 +14,6 @@ import User from '../components/Icons/User.astro';
                     Mi nombre es Danilo caceres soy DJ profecional hacer 10 años estudie en el Palacio de la musica con Oscar Valdez uno de losmejores DJ de uruguay y latinoamerica Contando con el abal del palacio de la musica y DJ School como DJ internacional 
                 </p>
             </div>
-            <img class="rounded-full size-64" src="public/facebooko.jpg">
+            <img class="rounded-full size-64" src="https://i.postimg.cc/43dS6zgt/facebooko.jpg">
         </article>
     </section>
