--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -1,5 +1,5 @@
 <section
-  class="relative bg-[url(public/high-angle-dj-control-panel-close-up.webp)] bg-cover bg-center bg-no-repeat"
+  class="relative bg-[url(https://i.postimg.cc/rppTRXbV/high-angle-dj-control-panel-close-up.webp)] bg-cover bg-center bg-no-repeat"
 >
   <div
     class="absolute inset-0  sm:bg-transparent sm:from-white/95 sm:to-white/25 ltr:sm:bg-gradient-to-r rtl:sm:bg-gradient-to-l"
