--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,7 +28,7 @@ import Contact from '../components/Contac.astro';
   <nav class="bg-neutral-900 border-gray-200 dark:bg-gray-900 fixed w-full z-20 border-b">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a class="flex items-center space-x-3 rtl:space-x-reverse">
-        <img src="public/DJ_Monogram_Logo-removebg-preview 1dj.png" class="h-12" alt="DJ logo" />
+        <img src="https://i.postimg.cc/MZjg3bjm/DJ-Monogram-Logo-removebg-preview-1dj.png" class="h-12" alt="DJ logo" />
         <span class="self-center text-2xl font-semibold whitespace-nowrap text-white dark:text-white">DaniDJ Eventos</span>
       </a>
       <button id="button" data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
