--- a/src/components/SectionContainer.astro
+++ b/src/components/SectionContainer.astro
@@ -2,6 +2,6 @@
 const { id } = Astro.props
 ---
 
-<section id={id} class={"w-full flex flex-col sm:flex-row px-4 mx-auto gap-5 py-4 h-fit"}>
+<section id={id} class={"w-full flex flex-col sm:flex-row px-4 mx-auto gap-5 py-4 h-fit justify-center"}>
     <slot />
 </section>
