Corrigiendo errores ortograficos

--- a/src/components/Aboutme.astro
+++ b/src/components/Aboutme.astro
@@ -11,7 +11,7 @@ import User from '../components/Icons/User.astro';
         <article class="flex flex-col md:flex-row gap-8 justify-center items-center">
             <div class="mb-4 text-white font-normal text-pretty order-2 md:order-1 text-2xl">
                 <p>
-                    Mi nombre es Danilo caceres soy DJ profecional hacer 10 años estudie en el Palacio de la musica con Oscar Valdez uno de losmejores DJ de uruguay y latinoamerica Contando con el abal del palacio de la musica y DJ School como DJ internacional 
+                    Mi nombre es <strong class="text-cyan-600">Danilo caceres soy DJ profecional hacer 10 años</strong>. Estudie en el Palacio de la musica con Oscar Valdez uno de los mejores DJ de uruguay y de latinoamerica. Contando con el abal del palacio de la musica y DJ School   
                 </p>
             </div>
             <img class="rounded-full size-64" src="https://i.postimg.cc/43dS6zgt/facebooko.jpg">
