--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -1,3 +1,7 @@
+---
+import Contact from '../components/Contac.astro';
+---
+
 <section
   class="relative bg-[url(https://i.postimg.cc/rppTRXbV/high-angle-dj-control-panel-close-up.webp)] bg-cover bg-center bg-no-repeat"
 >
@@ -12,6 +16,7 @@
       <h1 class="text-3xl font-extrabold sm:text-5xl text-teal-500">
         Dani DJ
         <strong class="block font-extrabold text-gray-500"> Eventos </strong>
+        <Contact/>
       </h1>
     </div>
   </div>
