--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,10 +38,16 @@ import '@fontsource-variable/inter';
 	}
   </script>
 <style is:global>
+	:root {
+    color-scheme: light dark;
+  }
 	html {
 		font-family: 'Inter Variable', sans-serif;
 		background: #13151a;
 		background-size: 224px;
 		scroll-behavior: smooth;
+	}
+	body{
+		overscroll-behavior: none;
 	}
 </style>
