--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,11 +18,11 @@ import MetodosdePago from '../components/MetodosdePago.astro';
 		<Header id="Inicío"/>
 		<Banner/>
 		<Servicios id="Servicios"/>
-		<SectionContainer >
+		<SectionContainer>
 			<Card />
 		</SectionContainer>
-		<SectionContainer id="Sobre mi">
-			<Aboutme />
+		<SectionContainer >
+			<Aboutme id="Sobre mi"/>
 		</SectionContainer>
 		<Pago id="Metodos de pago"/>
 		<SectionContainer >
