Agregando boton de contacto solucinando problemas en los metodos de pago

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -1,5 +1,5 @@
 ---
-import Contact from '../components/Contac.astro';
+import Button from './Button.astro';
 ---
 
 <section
@@ -16,7 +16,7 @@ import Contact from '../components/Contac.astro';
       <h1 class="text-3xl font-extrabold sm:text-5xl text-teal-500">
         Dani DJ
         <strong class="block font-extrabold text-gray-500"> Eventos </strong>
-        <Contact/>
+        <Button/>
       </h1>
     </div>
   </div>
