--- a/src/components/MetodosdePago.astro
+++ b/src/components/MetodosdePago.astro
@@ -31,7 +31,7 @@ const METODO =[
   </div>
       <p class="text-black text-lg font-medium text-center">{title}</p>
   <div class="p-6">
-    <p class="text-base">
+    <p class="text-base text-black">
       {description}
     </p>
   </div>
